fixed buttons on small screen

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -146,8 +146,8 @@ form.button_to {
 .time-container {
   margin-top: .5em;
   font-size: medium;
-  float: right;
-  text-align: center;
+  //float: right;
+  text-align: right;
 }
 
 .cursor-tooltip {
